[gd_scene load_steps=17 format=3 uid="uid://dw4rodtlfvbum"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_33kmr"]
[ext_resource type="Texture2D" uid="uid://beebfko0lf32" path="res://assets/enemy_saucer.png" id="2_33gio"]
[ext_resource type="PackedScene" uid="uid://6cgln8cut3ao" path="res://scenes/enemy_bullet.tscn" id="2_aqagt"]
[ext_resource type="PackedScene" uid="uid://kmpikcjj43hc" path="res://scenes/enemy_paths.tscn" id="3_0hssg"]
[ext_resource type="PackedScene" uid="uid://cr01kijsvftps" path="res://scenes/explosion.tscn" id="4_o1j2s"]
[ext_resource type="AudioStream" uid="uid://ckckxicfxlddy" path="res://assets/sounds/explosion.wav" id="6_ktid2"]
[ext_resource type="AudioStream" uid="uid://ca1nt3sflwsqr" path="res://assets/sounds/enemy_laser-2.wav" id="7_23t6s"]
[ext_resource type="AudioStream" uid="uid://busvswxcmmqgv" path="res://assets/sounds/enemy_laser.wav" id="7_p0ykq"]
[ext_resource type="Texture2D" uid="uid://ccu727xjtonl2" path="res://assets/corona.png" id="8_o4w2o"]
[ext_resource type="AudioStream" uid="uid://gup5ob6ub8pr" path="res://assets/sounds/enemy_death.wav" id="10_fu2oc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2eyjf"]
radius = 37.0

[sub_resource type="Animation" id="Animation_v0eqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_uc42c"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n86mv"]
_data = {
"RESET": SubResource("Animation_v0eqn"),
"flash": SubResource("Animation_uc42c")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2vbmm"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_58evp"]
_data = [Vector2(0.0120482, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.222276), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_33kmr")
enemy_bullet_scene = ExtResource("2_aqagt")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("2_33gio")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2eyjf")

[node name="EnemyPaths" parent="." instance=ExtResource("3_0hssg")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyPaths")
libraries = {
"": SubResource("AnimationLibrary_n86mv")
}

[node name="Explosion" parent="." instance=ExtResource("4_o1j2s")]
visible = false

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ktid2")
volume_db = -3.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("7_23t6s")
pitch_scale = 0.6

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p0ykq")

[node name="Exhaust" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_2vbmm")
amount = 20
texture = ExtResource("8_o4w2o")
emission_shape = 1
emission_sphere_radius = 25.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_58evp")

[node name="EnemyDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_fu2oc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
